# simple-rag-streamlit

./: .gitignore  README.md  main.py  pyproject.toml
data_parsers/: __init__.py  base.py  csv_parser.py  docx_parser.py  excel_parser.py  factory.py  json_parser.py  pdf_parser.py  text_parser.py
exceptions/: __init__.py  parsing_exceptions.py
pages/: data_ingestion.py
services/: __init__.py  parser_service.py
